# THC-playArea

./: .gitignore  Dockerfile  README.md  env.yml  pyproject.toml
.github/workflows/: azure-static-web-apps-lively-river-047d2db0f.yml  build.yml  fastapi-deploy_thc-test-santhosh.yml
docker/: Dockerfile
docs/: conf.py  house_price_prediction.rst  index.rst  modules.rst
fastapi/: main.py  requirements.txt
frontend-ts/: package-lock.json  package.json
scripts/: ingest_data.py  main.py  score.py  setLogging.py  train.py
src/house_price_prediction/: data_ingestion.py  scoring.py  training.py
tests/: test_module_imports.py  test_packageInstall.py
tests/unit-tests/: test_dataIngestion.py  test_score.py  test_training.py
